# CS50-Artificial-Intelligence

./: README.md
C++/degrees/: CMakeLists.txt  degrees.c++
C++/degrees/headers/: header
C++/degrees/objects/: degrees
C++/degrees/util/: util
Python/minesweeper/: minesweeper.py
tools/headers/: include  networking_headers
tools/prototypes/: networking_functions  string_functions
tools/source/: networking_functions.c++  string_functions.c++  tools.c++
